@@ -4,9 +4,9 @@ files[] = plupload.module
 core = 7.x
 package = Media
 
-; Information added by Drupal.org packaging script on 2014-01-13
-version = "7.x-1.6"
+; Information added by Drupal.org packaging script on 2014-11-07
+version = "7.x-1.7"
 core = "7.x"
 project = "plupload"
-datestamp = "1389617018"
+datestamp = "1415390716"
 
